[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DataTablePlot"
version = "2023.3"
description = "This Python Viewport Overlay modifier draws selected data tables plots from your pipeline onto the rendered image."
keywords = ["ovito", "ovito-extension"]
authors = [{name = "Constanze Kalcher", email = "support@ovito.org"}]
maintainers = [{name = "Constanze Kalcher", email = "support@ovito.org"}]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ovito >= 3.9.2",
    "matplotlib >= 3.7",
    "numpy >= 1.25"
]

[project.urls]
repository = "https://github.com/ckalcher/DataTablePlotOverlay"

[project.entry-points.'OVITO.ViewportOverlay']
"Data table plot" = "DataTablePlotOverlay:DataTablePlotOverlay"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
]